Fixed Bug#7838, "pipe_sig_handler should be static".